--- a/requirements.txt
+++ b/requirements.txt
@@ -146,6 +146,7 @@ safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.15.1
 sentence-transformers==3.4.1
+setuptools==75.8.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
