Added Docker files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,17 @@
-FROM python:3.11-slim
+FROM python:3.13-slim
 
-# Set working directory
+# Set the working directory
 WORKDIR /app
 
-# Copy requirements and install dependencies
-COPY ./requirements.txt /app/requirements.txt
-RUN pip3 install -r requirements.txt
+# Copy and install requirements
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-
-# Set Hugging Face cache directory (to prevent downloading every time)
-ENV HF_HOME=/app/huggingface_cache
-RUN mkdir -p $HF_HOME
-
-# Copy backend code
+# Copy your backend code into the container
 COPY . .
 
-# Expose FastAPI port
+# Expose port 8000 for the API
 EXPOSE 8000
 
-# Run FastAPI server
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the FastAPI application using uvicorn
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
