Updated README file. Now it contain all instructions. Updated backend docker file and huggingface key in config file. Created docker-compose file so it builds both containers and updated technologies on website

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,11 +10,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the entire backend directory (including backend/)
 COPY . .
 
-# Set PYTHONPATH to include the /app directory so Python can find the 'backend' package
-ENV PYTHONPATH=/app
-
 # Expose port 8000 for the API
 EXPOSE 8000
 
 # Run the FastAPI application using uvicorn, pointing to backend.main
-CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
